--- a/index.html
+++ b/index.html
@@ -7,5 +7,40 @@
   </head>
   <body>
 
+    <div id ="home">
+      <h1>Broadway Design</h1>
+
+      <h4><a href="#home">Home</a></h4>
+      <h4><a href="#process">Process</a></h4>
+      <h4><a href="#work">Work</a></h4>
+      <h4><a href="#team">Team</a></h4>
+      <h4><a href="#contact">Contact</a></h4>
+    </div>
+
+    <div id="process">
+      <h2>Our Process</h2>
+
+        <h3>Identify</h3>
+
+        <h3>Understand</h3>
+
+        <h3>Execute</h3>
+    </div>
+
+
+    <div id="work">
+      <h3>Portfolio</h3>
+    </div>
+
+
+    <div id="team">
+      <h3>Team</h3>
+    </div>
+
+
+    <div id="contact">
+      <h3>Contact</h3>
+    </div>
+
   </body>
 </html>
