--- a/index.html
+++ b/index.html
@@ -7,39 +7,61 @@
   </head>
   <body>
 
-    <div id ="home">
+    <div class ="home">
       <h1>Broadway Design</h1>
 
-      <h4><a href="#home">Home</a></h4>
-      <h4><a href="#process">Process</a></h4>
-      <h4><a href="#work">Work</a></h4>
-      <h4><a href="#team">Team</a></h4>
-      <h4><a href="#contact">Contact</a></h4>
+      <p><a class="btn-nav" href="#">Home</a></p>
+      <p><a class="btn-nav" href="#process">Process</a></p>
+      <p><a class="btn-nav" href="#work">Work</a></p>
+      <p><a class="btn-nav" href="#team">Team</a></p>
+      <p><a class="btn-nav" href="#contact">Contact</a></p>
     </div>
 
     <div id="process">
-      <h2>Our Process</h2>
+      <h2 id="process-title">Our Process</h2>
 
+        <img src="./resources/images/identify.svg">
         <h3>Identify</h3>
+          <p>We focus on the most important details.</p>
 
+        <img src="./resources/images/understand.svg">
         <h3>Understand</h3>
+          <p>We study our projects inside and out.</p>
 
+        <img src="./resources/images/execute.svg">
         <h3>Execute</h3>
+          <p>We put everything we have into our work.</p>
     </div>
 
+    <h2 id="designed-title">Designed in New York</h2>
 
     <div id="work">
       <h3>Portfolio</h3>
+        <p>Coming Soon</p>
     </div>
 
 
     <div id="team">
       <h3>Team</h3>
+        <p>We're Hiring!</p>
     </div>
 
 
     <div id="contact">
-      <h3>Contact</h3>
+      <h4>Contact</h4>
+        <p>Phone: (555)-555-5555<br><br>Email: test@example.com<br><br>Twitter: @test</p>
+    </div>
+
+    <div class="footer">
+      <p>© Broadway 2017
+      <a class="btn-nav" href="#">Home</a>
+      <a class="btn-nav" href="#process">Process</a>
+      <a class="btn-nav" href="#work">Work</a>
+      <a class="btn-nav" href="#team">Team</a>
+      <a class="btn-nav" href="#contact">Contact</a>
+      </p>
+
+
     </div>
 
   </body>
